<resources>
    <string name="app_name">Test_balina_1</string>
    <string name="register">Register</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="login">Login</string>
    <string name="login_login">Login</string>
    <string name="login_password">Password</string>
    <string name="registration">Registration</string>
    <string name="repeat_password">Repeat password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>
    <string name="location_settings">Location settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="photos">Photos</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="uploadPhoto">upload</string>
</resources>
