<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/reg_login"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/login_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/login_password"
        app:layout_constraintEnd_toEndOf="@+id/reg_login"
        app:layout_constraintStart_toStartOf="@+id/reg_login"
        app:layout_constraintTop_toBottomOf="@+id/reg_login" />

    <EditText
        android:id="@+id/reg_password_repeat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/repeat_password"
        app:layout_constraintEnd_toEndOf="@+id/reg_password"
        app:layout_constraintStart_toStartOf="@+id/reg_password"
        app:layout_constraintTop_toBottomOf="@+id/reg_password" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="@+id/reg_password_repeat"
        app:layout_constraintStart_toStartOf="@+id/reg_password_repeat"
        app:layout_constraintTop_toBottomOf="@+id/reg_password_repeat" />

</android.support.constraint.ConstraintLayout>